- now using datatables (sorting, paging, filtering) - showing all attributes, ordered by number of objects carrying the tag - avoid conflict between id and the tag id as well as between type and the tag type and geometry and the tag geometry - show tooltips on the cells. TODO: only show them were content is hidden due to the overflow property

--- a/css/default.css
+++ b/css/default.css
@@ -338,3 +338,14 @@ body .ui-tooltip {
   position: absolute;
   right: 24px;
 }
+
+td {
+  max-width:300px;
+  overflow:hidden;
+  white-space:nowrap;
+}
+body .table-tooltip { 
+  background-color: red;
+  opacity:1;
+  border: 1px solid black;
+}
